fixed issue with drop-up alignment. added two classes to handle it, removed duplicated code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,13 @@ https://stackoverflow.com/questions/18197619/reduce-clickable-area-for-link */
 }
 
 /*------------------------------------------------------------ VIDEO ----------*/
+
+
+#video-page {
+  /* min-height: 100%; */
+}
+
+
 .video-properties {
   padding: 0;
   margin: 0;
@@ -315,11 +322,6 @@ footer {
 }
 
 /*------------------------------------------------------------- SOCIAL --*/
-.social-links {
-  float: right;
-  margin: 15px 19px 11px 15px;
-}
-
 .social-links li a i {
   width: 32px;
   height: 32px;
@@ -354,42 +356,14 @@ ul {
   margin-bottom: 1rem;
 }
 
-.social-links-du {
+/* Lowest static block icons should sit on top of social button */
+.social-static {
   float: right;
+  margin: 15px 20px 12px 15px;
 }
 
-.social-links-du li a i {
-  width: 32px;
-  height: 32px;
-  padding: 12px 0;
-  border-radius: 50%;
-  font-size: 13px;
-  line-height: 7px;
-  word-spacing: 5px;
-  margin-bottom: 5px;
-  text-align: center;
-  background-color: #fafafa;
-  color: #e84610;
-  border: 0.5px solid #e84610;
-}
-
-.social-links-du li a i:hover {
-  background-color: #e84610;
-  border: 3px solid #212529;
-  color: #fafafa;
-}
-
-/* Social links not clear on dark pages */
-.dark-page .social-links-du li a i:hover {
-  background-color: #e84610;
-  border: 3px solid #fafafa;
-  color: #fafafa;
-}
-
-.social-links-du dl,
-ol,
-ul {
-  margin-bottom: 1rem;
+.social-du {
+  float: right;
 }
 
 /*------------------------------------------------------ DROP UP -------*/
@@ -404,7 +378,7 @@ ul {
 .drop-pos {
   position: absolute;
   bottom: 2px;
-  right: 25px;
+  right: 15px;
   margin: 0;
 }
 
@@ -415,7 +389,6 @@ ul {
   bottom: 30px;
   z-index: 1;
   margin: 1px -4px;
-  /* transform: translateX(10px); */
 }
 
 .dropup-content li {
